feat: monitor freeze
